--- a/.install/Brewfile
+++ b/.install/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask-fonts"
 tap 'homebrew/bundle'
 
 # Formulae
+brew "thefuck"
 brew "starship"
 brew "zsh"
 brew "zsh-autosuggestions"
