feat(shell): add vi mode plugin

--- a/.scripts/Brewfile
+++ b/.scripts/Brewfile
@@ -16,6 +16,7 @@ brew "thefuck"
 brew "zsh"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "zsh-vi-mode"
 brew "zsh-you-should-use"
 brew "zoxide"
 
