feat(keyboard): add Karabiner with basic config
This includes just the right option key as Hyper and the Caps Lock
reassigned to Control if pressed with other keys and Esc if pressed
alone.

--- a/.scripts/Brewfile
+++ b/.scripts/Brewfile
@@ -21,5 +21,6 @@ brew "zsh-you-should-use"
 brew "zoxide"
 
 # Apps
-cask 'alacritty'
+cask "alacritty"
 cask "font-hack-nerd-font"
+cask "karabiner-elements"
