chore: add yadm as dofiles manager
Replace all the boilerplate of custom scripts to deal with a bare
dotfiles repo.

Do not yet move the macOS configuration scripts to the yadm bootstrap
directory.

--- a/.config/git/config
+++ b/.config/git/config
@@ -1,9 +1,7 @@
 [user]
-  ; These values are set in ./custom_global and ./custom_dotfiles.
+  ; These values are set in ./custom_global.
 [include]
   path = ./custom_global
-[includeIf "gitdir:~/.cfg"]
-  path = ./custom_dotfiles
 [core]
 	editor = nvim
   pager = delta
